@@ -205,7 +205,8 @@ main (int argc, char *argv[])
     }
   catch (CORBA::Exception& ex)
     {
-      ex._tao_print_exception ("Caught exception:");
+      ex._tao_print_exception
+        ("mized_security/server: caught unexpected exception ");
       return 1;
     }
 
