@@ -1,3 +1,13 @@
+Fri Jul 13 11:33:42 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * orbsvcs/tests/Security/mixed_security_test/Foo_i.h:
+        * orbsvcs/tests/Security/mixed_security_test/Foo_i.cpp:
+          Coding style update.
+
+        * orbsvcs/tests/Security/mixed_security_test/client.cpp:
+        * orbsvcs/tests/Security/mixed_security_test/server.cpp:
+          Exception report improvement.
+
 Fri Jul 13 03:43:00 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
 
         * orbsvcs/tests/Security/mixed_security_test/Foo_i.h:
